--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="file:///C:/Users/DELL/Documents/deepak.png.jpg">
     <button onclick="openwindow()">open file</button>
     <button id="click">datsheet</button>
-    <img src= "gallery.html/deepak.png.jpg" id="pic">
+    <img src= "gallery.html/deepak.png.jpg" id="pic" onabort="save"">
     <script>
         let pic=document.getElementById('pic');
        console.log(pic);
